# vcu_gst_lib

./: Makefile.am  README.md  configure.ac  vcu-gst-lib.pc
include/: vgst_config.h  vgst_err.h  vgst_lib.h  vgst_pipeline.h  vgst_split_pipeline.h  vgst_utils.h
src/: vgst_lib.c  vgst_pipeline.c  vgst_split_pipeline.c  vgst_utils.c
